gcc/testsuite/g++.dg/parse/typedef5.C
namespace A
{
  typedef int T;	// { dg-error "previous declaration" }
}

class A::T x;		// { dg-error "using typedef-name|invalid type" }
